# mlir-toy

./: CMakeLists.txt  main.cpp
include/toy/: Lexer.h  Toy.td  ToyDialect.td  ToyOps.td
tests/: toy.mlir
